--- a/_main.tex
+++ b/_main.tex
@@ -80,7 +80,7 @@
 
 \title{Topology}
 \author{Ashan Jayamal}
-\date{2024-02-14}
+\date{2024-02-16}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -136,7 +136,7 @@ A set \(X\) with a topology \(\mathcal{T}\) is called a topological space. Denot
 
 \begin{figure}
 \centering
-\includegraphics{figure 01.png}
+\includegraphics{figures/figure 01.png}
 \caption{\label{fig:gi}\(~\)}
 \end{figure}
 
@@ -150,7 +150,7 @@ Now consider the right hand coner figure. \(\{a,b\}\) and \(\{b,c\}\) in collect
 
 \begin{figure}
 \centering
-\includegraphics{figure 02.png}
+\includegraphics{figures/figure 02.png}
 \caption{\label{fig:fig2}\(~\)}
 \end{figure}
 
@@ -192,7 +192,7 @@ Once we define a structure on a set, often we try to understand what the minimum
 
 \begin{figure}
 \centering
-\includegraphics{figure 03.jpg}
+\includegraphics{figures/figure 03.jpg}
 \caption{\label{fig:fig3}\(~\)}
 \end{figure}
 
@@ -278,7 +278,7 @@ Let \(\mathcal{T}\) be a topology on \(X\). If \(\mathcal{B} \subset \mathcal{T}
 \end{remark}
 
 \begin{lemma}
-\protect\hypertarget{lem:unnamed-chunk-14}{}\label{lem:unnamed-chunk-14}Let \((X, \mathcal{T})\) be a topological space. Let \(\mathcal{B} \subset \mathcal{T}\). Then \(\mathcal{B}\) is a basis and \(\mathcal{T}_{\mathcal{B}}=\mathcal{T}\) if and only if \(\mathcal{T}\) is the set of all unions of elements in \(\mathcal{B}\).
+\protect\hypertarget{lem:lemmaTequalsTB}{}\label{lem:lemmaTequalsTB}Let \((X, \mathcal{T})\) be a topological space. Let \(\mathcal{B} \subset \mathcal{T}\). Then \(\mathcal{B}\) is a basis and \(\mathcal{T}_{\mathcal{B}}=\mathcal{T}\) if and only if \(\mathcal{T}\) is the set of all unions of elements in \(\mathcal{B}\).
 \end{lemma}
 
 \begin{proof}
@@ -295,7 +295,7 @@ Let \(\mathcal{T}\) be a topology on \(X\). If \(\mathcal{B} \subset \mathcal{T}
 \end{proof}
 
 \begin{lemma}
-\protect\hypertarget{lem:unnamed-chunk-16}{}\label{lem:unnamed-chunk-16}Let \((X, \mathcal{T})\) be a topological space. Let \(\mathcal{B} \subset \mathcal{T}\). Then \(\mathcal{B}\) is a basis and \(\mathcal{T}_{\mathcal{B}}=\mathcal{T}\) if and if any \(U \in \mathcal{T}\) satisfies (Gl), i.e.~\(\forall x \in U, \exists B_{x} \in \mathcal{B}\) s.t. \(x \in B_{x} \subset U\).
+\protect\hypertarget{lem:lemma110}{}\label{lem:lemma110}Let \((X, \mathcal{T})\) be a topological space. Let \(\mathcal{B} \subset \mathcal{T}\). Then \(\mathcal{B}\) is a basis and \(\mathcal{T}_{\mathcal{B}}=\mathcal{T}\) if and if any \(U \in \mathcal{T}\) satisfies (Gl), i.e.~\(\forall x \in U, \exists B_{x} \in \mathcal{B}\) s.t. \(x \in B_{x} \subset U\).
 \end{lemma}
 
 \begin{proof}
@@ -314,11 +314,11 @@ Let \(\mathcal{T}\) be a topology on \(X\). If \(\mathcal{B} \subset \mathcal{T}
 \section{Comparing Topologies}\label{comparing-topologies}}
 
 \begin{definition}
-\protect\hypertarget{def:unnamed-chunk-18}{}\label{def:unnamed-chunk-18}Let \(\mathcal{T}, \mathcal{T}^{\prime}\) be two topologies for a set \(X\). We say \(\mathcal{T}^{\prime}\) is finer than \(\mathcal{T}\) or \(\mathcal{T}\) is coarser than \(\mathcal{T}^{\prime}\) if \(\mathcal{T} \subset \mathcal{T}^{\prime}\). The intuition for this notion is '' \(\left(X, \mathcal{T}^{\prime}\right)\) has more open subsets to separate two points in \(X\) than \((X, \mathcal{T})\) ``.
+\protect\hypertarget{def:unnamed-chunk-16}{}\label{def:unnamed-chunk-16}Let \(\mathcal{T}, \mathcal{T}^{\prime}\) be two topologies for a set \(X\). We say \(\mathcal{T}^{\prime}\) is finer than \(\mathcal{T}\) or \(\mathcal{T}\) is coarser than \(\mathcal{T}^{\prime}\) if \(\mathcal{T} \subset \mathcal{T}^{\prime}\). The intuition for this notion is '' \(\left(X, \mathcal{T}^{\prime}\right)\) has more open subsets to separate two points in \(X\) than \((X, \mathcal{T})\) ``.
 \end{definition}
 
 \begin{lemma}
-\protect\hypertarget{lem:unnamed-chunk-19}{}\label{lem:unnamed-chunk-19}Let \(\mathcal{B}, \mathcal{B}^{\prime}\) be bases of topologies \(\tau, \tau^{\prime}\) on \(X\) respectively. Then \(\tau^{\prime}\) is finer than \(\tau \Leftrightarrow\) \(\forall B \in \mathcal{B}\) and \(\forall x \in B, \exists B^{\prime} \in \mathcal{B}^{\prime}\) s.t. \(x \in B^{\prime} \subset B\).
+\protect\hypertarget{lem:finerLemma}{}\label{lem:finerLemma}Let \(\mathcal{B}, \mathcal{B}^{\prime}\) be bases of topologies \(\mathcal{T}, \mathcal{T}^{\prime}\) on \(X\) respectively. Then \(\mathcal{T}^{\prime}\) is finer than \(\mathcal{T} \Leftrightarrow\) \(\forall B \in \mathcal{B}\) and \(\forall x \in B, \exists B^{\prime} \in \mathcal{B}^{\prime}\) s.t. \(x \in B^{\prime} \subseteq B\).
 \end{lemma}
 
 \begin{proof}
@@ -326,33 +326,198 @@ Let \(\mathcal{T}\) be a topology on \(X\). If \(\mathcal{B} \subset \mathcal{T}
 
 \begin{itemize}
 \item
-  \(\Rightarrow\) Since \(\mathcal{B} \subset \tau \subset \tau^{\prime}\), all subsets in \(\mathcal{B}\) satisfies (G1) for \(\tau^{\prime}\), which is exactly the statement we wanted to prove.
+  \(\Rightarrow\) Since \(\mathcal{B} \subset \mathcal{T} \subset \mathcal{T}^{\prime}\), all subsets in \(\mathcal{B}\) satisfies (G1) for \(\mathcal{T}^{\prime}\), which is exactly the statement we wanted to prove.
 \item
-  \(\Leftarrow\) The LHS says \(\mathcal{B} \subset \tau^{\prime}\). We need to show that it implies that any \(U \in \tau\) satisfies (G1) for \(\tau^{\prime}\) too.
+  \(\Leftarrow\) The LHS says \(\mathcal{B} \subset \mathcal{T}^{\prime}\). We need to show that it implies that any \(U \in \mathcal{T}\) satisfies (G1) for \(\mathcal{T}^{\prime}\) too.
   \[
-  \forall U \in \tau, \forall x \in U, \exists B \in \mathcal{B} \text { s.t. } x \in B \subset U
+  \forall U \in \mathcal{T}, \forall x \in U, \exists B \in \mathcal{B} \text { s.t. } x \in B \subset U
   \]But\[
   \forall B \in \mathcal{B}, \forall x \in B, \exists B^{\prime} \in \mathcal{B}^{\prime} \text { s.t. } x \in B^{\prime} \subset B .
   \]
   Combining those two,
   \[
-  \forall U \in \tau, \forall x \in U, \exists B^{\prime} \in \mathcal{B}^{\prime} \text { s.t. } x \in B^{\prime} \subset B \subset U .
+  \forall U \in \mathcal{T}, \forall x \in U, \exists B^{\prime} \in \mathcal{B}^{\prime} \text { s.t. } x \in B^{\prime} \subset B \subset U .
   \]
 \end{itemize}
 
 \end{proof}
+
+\begin{definition}[subbasis]
+\protect\hypertarget{def:unnamed-chunk-18}{}\label{def:unnamed-chunk-18}Let \(X\) be a set.A subbasis \(\mathcal{S}\) for a topology on \(X\) is a collection of subsets of \(X\) whose union equals \(X\).
+\[\left(\text{i.e. }\forall x\in X ~\exists S\in\mathcal{S} \text{  such that } x\in S\right)\]
+\end{definition}
+
+\begin{figure}
+\centering
+\includegraphics{figures/figure 06.jpg}
+\caption{\label{fig:64}\(~\)}
+\end{figure}
+
+\begin{definition}
+\protect\hypertarget{def:unnamed-chunk-19}{}\label{def:unnamed-chunk-19}The topology generated by the subbasis \(\mathcal{S}\) is defined to be the collection \(\mathcal{T}\) of all unions of finite intersections of elements of \(\mathcal{S}\).
+\end{definition}
+
+\hypertarget{order-topology}{%
+\section{Order Topology}\label{order-topology}}
+
+\begin{definition}[Linear Order/ Complete Order]
+\protect\hypertarget{def:unnamed-chunk-20}{}\label{def:unnamed-chunk-20}
+
+Consider order relation ``\(<\)''.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  If \(x \neq y\), then either \(x < y\) or \(y < x\).
+\item
+  If \(x < y\), then \(x\neq y\).
+\item
+  If \(x < y\) and \(y < z\), then \(x < z\).
+\end{enumerate}
+
+\end{definition}
+
+\begin{example}
+\protect\hypertarget{exm:unnamed-chunk-21}{}\label{exm:unnamed-chunk-21}\(\mathbb{R}\) is ordered set with less than relation.
+\end{example}
+
+First, let's see intervals in an Ordered Set.
+
+Suppose that \(X\) is a set having a simple order relation \(<\). Given elements \(a\) and \(b\)
+of \(X\) such that \(a < b\), there are four subsets of \(X\) that are called the intervals determined by \(a\) and \(b\). They are the following :
+
+\begin{itemize}
+\tightlist
+\item
+  \((a, b) = \{x\in X | a < x < b\}\) (Type: open interval in \(X\)),
+\item
+  \((a, b] = \{x\in X | a < x ≤ b\}\)(Type: half-open interval in \(X\)),
+\item
+  \([a, b) = \{x\in X | a ≤ x < b\}\)(Type: half-open interval in \(X\)),
+\item
+  \([a, b] = \{x\in X | a ≤ x ≤ b\}\) (Type: closed interval in \(X\)),
+\end{itemize}
+
+The notation used here is familiar to you already in the case where \(X\) is the real line,but these are intervals in an arbitrary ordered set.
+
+The use of the term ``open'' in this connection suggests that open intervals in \(X\) should turn out to be open sets when
+we put a topology on \(X\). And so they will.
+
+\begin{definition}
+\protect\hypertarget{def:unnamed-chunk-22}{}\label{def:unnamed-chunk-22}Let \(X\) be a set with a simple order relation; assume \(X\) has more than one element. Let \(\mathcal{B}\) be the collection of all sets of the following types:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  All open intervals \((a, b)\) in \(X\).
+\item
+  All intervals of the form \([a_0, b)\), where \(a_0\) is the smallest element (if any) of \(X\).
+\item
+  All intervals of the form \((a, b_0]\), where \(b_0\) is the largest element (if any) of \(X\).
+\end{enumerate}
+
+i.e.:
+\[\begin{aligned}
+\mathcal{B}:=&\{(a,b):a<b, a,b\in X\}\\
+& \bigcup \{[a,b:a<b, a_0,b\in X \text{ and if $X$ has a smallest element and $a_0$ is the smallest element}\}\\
+& \bigcup \{(a,b]:a<b, a,b_0\in X \text{ and if $X$ has a largest element and $b_0$ is the largest element}\}
+\end{aligned}\]
+The collection \(\mathcal{B}\) is a basis for a topology on \(X\), which is called the order topology.
+\end{definition}
+
+\textbf{Notation}:
+Denote an arbitrary element of \(\mathbb{R} \times \mathbb{R}\) by \(x \times y\), to avoid difficulty with notation.
+
+\begin{definition}[Dictionary Oreder]
+\protect\hypertarget{def:unnamed-chunk-23}{}\label{def:unnamed-chunk-23}Suppose that \(A\) and \(B\) are two sets with order relations \(<_{A}\) and \(<_{B}\) respectively. Define an order relation \(<\) on \(A \times B\) by defining \(a_{1} \times b_{1} < a_{2} \times b_{2}\) if \(a_{1} <_{A} a_{2}\), or if \(a_{1} = a_{2}\) and \(b_{1} <_{B} b_{2}\). It is called the dictionary order relation on \(A \times B\).
+\end{definition}
+
+\begin{example}
+\protect\hypertarget{exm:unnamed-chunk-24}{}\label{exm:unnamed-chunk-24}Consider the set \(\mathbb{R} \times \mathbb{R}\) in the dictionary order. The set \(\mathbb{R} \times \mathbb{R}\) has neither a largest nor a smallest element, so the order topology on \(\mathbb{R} \times \mathbb{R}\) has as basis the collection of all open intervals of the form \((a \times b, c \times d)\) for \(a < c\), and for \(a = c\) and \(b < d\).
+
+These two types of intervals are indicated in Figure 14.1. The sub collection consisting of only intervals of the second type is also a basis for the order topology on \(\mathbb{R} \times \mathbb{R}\), as you can check.
+\end{example}
+
+\begin{figure}
+\centering
+\includegraphics{figures/figure 07.jpg}
+\caption{\label{fig:fi7}\(~\)}
+\end{figure}
+
+\begin{example}
+\protect\hypertarget{exm:unnamed-chunk-25}{}\label{exm:unnamed-chunk-25}The standard topology,lower limit topology and upper limit topology on \(\mathbb{R}\).
+
+\[\mathcal{B}:=\{(x,y):x<y, x,y\in \mathbb{R}\}\]
+\(\mathcal{B}\) is a basis which generates the standard topology.
+\[\mathcal{B}^\prime:=\{[x,y):x<y, x,y\in \mathbb{R}\}\]
+\(\mathcal{B}^\prime\) is a basis which generates the lower limit topology on \(\mathbb{R}\).
+\[\mathcal{B}^{\prime\prime}:=\{(x,y]:x<y, x,y\in \mathbb{R}\}\]
+\(\mathcal{B}^{\prime\prime}\) is a basis which generates the upper limit topology on \(\mathbb{R}\).
+\end{example}
+
+\begin{lemma}
+\protect\hypertarget{lem:unnamed-chunk-26}{}\label{lem:unnamed-chunk-26}The lower limit topology on \(\mathbb{R}\) is strictly finer than standard topology on \(\mathbb{R}\).
+\end{lemma}
+
+\begin{proof}
+Let \((a,b)\in \mathbb{R}\). We are going to use Lemma \ref{lem:finerLemma}. Let \((a,b)\) be a element from basis of standard topology. Let \(x\in (a,b)\). Then \(a<x<b\). Then observe that \$ x\in [x,b)\subset (a,b) $. Note that $[x,b)$ is element of basis of lower limit topology. Thus, by lemma \\ref{lem:finerLemma} the lower limit topology on $\mathbb{R}$ is finer than standard topology on $\mathbb{R}$. Now we have to prove that **strictly property**.
+
+Now let $[c,d)$ is element of basis of lower limit topology on $\mathbb{R}$. Now observe that there is no open interval that containing $c$ and contained in $[c,d)$. By lemma \\ref{lem:finerLemma}, the lower limit topology on $\mathbb{R}$ is strictly finer than standard topology on $\mathbb{R}$.
+
+:::
+Note that basis element in lower limit toplogy is **not** open in the standard toplogy. But otherway around is very true. As an example,
+\[(1,2)=\bigcup_{n\in \mathbb{N}}[1+\frac{1}{n},2).\]
+Clearly left hand side is open in lower limit toplogy by T2.
+
+::: {.corollary #unnamed-chunk-28}
+The lower limit topology on $\mathbb{R}$ is not comparable upper limit topology on $\mathbb{R}$.
+:::
+::: {.proof}
+Exercise
+
+Hint: (try to find counter example)
+:::
+**Notation**:
+
+- $\mathbb{R}_l:=\mathbb{R}$ with lower limit topology.
+- $\mathbb{R}_u:=\mathbb{R}$ with upper limit topology.
+- $\mathbb{R}:=\mathbb{R}$ with standard topology.
+
+::: {.example #unnamed-chunk-30}
+The positive integers $\mathbb{Z}^+:=\{1,2,3,...\}$ form an ordered set with a smallest element. The order topology on $\mathbb{Z}^+$ is the discrete topology, for every one-point set is open: If $n > 1$, then the one-point set $\{n\} = (n - 1, n + 1)$ is a basis element; and if $n = 1$, the one-point set $\{1\}=[1, 2)$ is a basis element.
+:::
+
+![\label{fig:fig8}$~$](figures/figure 08.jpg)
+::: \{.example \#unnamed-chunk-31\}
+The set \(X = \{1, 2\} \times \mathbb{Z}^+\) in the dictionary order is another example of an ordered set with a smallest element. Denoting \(1 \times n\) by \(a_n\) and \(2 \times n\) by \(b_n\), we can represent \(X\) by
+\[a_1, a_2,..., b_1, b_2,....\]
+
+i.e.:\[X=\{1\times 1,1 \times 2, 1 \times 3, ..., 2\times 1, 2 \times 2, ....\}\]
+Here \(a_1=1\times 1\) is the smallest element in \(X\).
+
+The order topology on \(X\) is \textbf{not} the discrete topology. Most one-point sets are open, but there is an exception-the one-point set \(\{b_1\}={2\times 1}\). Any open set containing \(b_1\) must contain a basis element about \(b_1\) (G1 condition), and any basis element containing \(b_1\) contains points of the \(a_i\) sequence.
+As an example, \(b_1=2\times 1\in (1\times 7,2\times 8)\). Then the sequence \(a_8,a_9,a_{10},....=1\times 8,1\times 9, 1\times 10,...\) contained in \((a_7,b_8)=(1\times 7,2\times 8)\). So, we cannot find an open interval in \(X\) that contains \(b_1\) and is contained in \(\{b_1\}\).
+\end{proof}
+
+\begin{example}
+\protect\hypertarget{exm:unnamed-chunk-32}{}\label{exm:unnamed-chunk-32}\[\mathcal{B}^{\prime\prime\prime}:=\{[x,y]:x\leq y, x,y\in \mathbb{R}\}\]
+\(\mathcal{B}^{\prime\prime\prime}\) is a basis which generates the discrete topology on \(\mathbb{R}\). Because, \(\{a\}=[a,a]\).
+\end{example}
 
 \hypertarget{product-toplogy-on-x-times-y.}{%
 \section{\texorpdfstring{Product Toplogy on \(X \times Y\).}{Product Toplogy on X \textbackslash times Y.}}\label{product-toplogy-on-x-times-y.}}
 
 The Cartesian product of two topological spaces has an induced topology called the product topology. There is also an induced basis for it. Here is the example to keep in mind:
 
-```\{example\}Recall that the standard topology of \(\mathbb{R}^{2}\) is given by the basis
+\begin{example}
+\protect\hypertarget{exm:egR2}{}\label{exm:egR2}Recall that the standard topology of \(\mathbb{R}^{2}\) is given by the basis
 
 \[
 \mathcal{B}:=\left\{(a, b) \times(c, d) \subset \mathbb{R}^{2} \mid a<b, c<d\right\}
 \]
-```
+\end{example}
 
 \begin{proof}
 (Proof of \(\mathcal{B}\) is basis.)
@@ -365,7 +530,7 @@ Therefore, this satisfied the B1 condition.
 \begin{itemize}
 \tightlist
 \item
-  Now supposose that \((x,y)\in (a_1,b_1)\times(c_1,d_1)\cap (a_2,b_2)\times(c_2,d_2)\)
+  Now suppose that \((x,y)\in (a_1,b_1)\times(c_1,d_1)\cap (a_2,b_2)\times(c_2,d_2)\)
   Now observe
   \((x,y)\in (a_1,b_1)\times(c_1,d_1)\implies x\in(a_1,b_1)\) and \(y\in(c_1,d_1)\)
 \end{itemize}
@@ -380,33 +545,235 @@ See figure \ref{fig:fig5}.
 This satisfies B2 condition.
 \end{proof}
 
-\includegraphics{figure 04.jpg}
-\includegraphics{figure 05.jpg}
+\includegraphics{figures/figure 04.jpg}
+\includegraphics{figures/figure 05.jpg}
+Let's go to a rigid definition.
 
 \begin{definition}
-\protect\hypertarget{def:unnamed-chunk-22}{}\label{def:unnamed-chunk-22}If \(\left(X, \tau_{X}\right)\) and \(\left(Y, \tau_{Y}\right)\) are topological spaces, then the collection \(\mathcal{B}\) of subsets of the form \(U \times V \subset X \times Y, U \in \tau_{X}, V \in \tau_{Y}\) forms a basis of a topology. The topology generated by \(\mathcal{B}\) is called product topology on \(X \times Y\).
+\protect\hypertarget{def:unnamed-chunk-34}{}\label{def:unnamed-chunk-34}If \(\left(X, \mathcal{T}_{X}\right)\) and \(\left(Y, \mathcal{T}_{Y}\right)\) are topological spaces, then the collection \(\mathcal{B}\) of subsets of the form \(U \times V \subset X \times Y, U \in \mathcal{T}_{X}, V \in \mathcal{T}_{Y}\) forms a basis of a topology.
+
+i.e.:
+\[\mathcal{B}:=\{U \times V \subset X \times Y: U \in \mathcal{T}_{X}, V \in \mathcal{T}_{Y}\}\]
+The topology generated by \(\mathcal{B}\) is called product topology on \(X \times Y\).
 \end{definition}
 
 \begin{proof}
+
 (Proof of \(\mathcal{B}\) is basis)
-(B1) Let \((x, y) \in X \times Y\) be an arbitrary element. We need to find a subset in \(\mathcal{B}\) containing \((x, y)\), but since \(X \times Y \in \mathcal{B}\), it is obvious.
 
-(B2) For any \(U_{1} \times V_{1}, U_{2} \times V_{2} \in \mathcal{B}\), the intersection is \(\left(U_{1} \times V_{1}\right) \cap\left(U_{2} \times V_{2}\right)=\left(U_{1} \cap U_{2}\right) \times\left(V_{1} \cap V_{2}\right) \in \mathcal{B}\). So it is obvious again.
+\begin{itemize}
+\item
+  (B1) Let \((x, y) \in X \times Y\) be an arbitrary element. We need to find a subset in \(\mathcal{B}\) containing \((x, y)\), but since \(X \times Y \in \mathcal{B}\), it is obvious.
+\item
+  (B2) For any \(U_{1} \times V_{1}, U_{2} \times V_{2} \in \mathcal{B}\), the intersection is \(\left(U_{1} \times V_{1}\right) \cap\left(U_{2} \times V_{2}\right)=\left(U_{1} \cap U_{2}\right) \times\left(V_{1} \cap V_{2}\right) \in \mathcal{B}\). So it is obvious again.
+\end{itemize}
+
 \end{proof}
-
-\begin{definition}[subbasis]
-\protect\hypertarget{def:unnamed-chunk-24}{}\label{def:unnamed-chunk-24}Let \(X\) be a set.A subbasis \mathcal{S} for a topology on \(X\) is a collection of subsets of \(X\) whose union equals \(X\).
-\[\left(\text{i.e. }\forall x\in X ~\exists S\in\mathcal{S} \text{  such that } x\in S\right)\]
-\end{definition}
 
 \begin{figure}
 \centering
-\includegraphics{figure 06.jpg}
-\caption{\label{fig:64}\(~\)}
+\includegraphics{figures/figure 09.jpg}
+\caption{\label{fig:fig09}\(~\)}
 \end{figure}
 
+\begin{theorem}
+\protect\hypertarget{thm:unnamed-chunk-36}{}\label{thm:unnamed-chunk-36}If \(\mathcal{B}_X\) is a basis of \((X, \mathcal{T}_X)\) and \(\mathcal{B}_Y\) is a basis of \((Y, \mathcal{T}_Y)\), then \(\mathcal{B}_X \times \mathcal{B}_Y\) is a basis of the product topology on \(X \times Y\).
+\end{theorem}
+
+\begin{proof}
+To check \(\mathcal{B}_{X \times Y}\), let's use lemma \ref{lem:lemma110} which states that \(\mathcal{B}\) is a basis for \(\mathcal{T}\) iff for any \(U \in T\) and any \(x \in U\), there is \(B \in \mathcal{B}\) such that \(x \in B \subseteq U\).
+
+Let \(W \in \mathcal{T}_{prod}\) and \((x, y) \in W\). By the definition of product topology, there are \(U \in \mathcal{T}_X\) and \(V \in \mathcal{T}_Y\) such that \((x,y) \in U \times V \subseteq W\). Since \(\mathcal{B}_X\) and \(\mathcal{B}_Y\) are bases, there are \(B \in \mathcal{B}_X\) and \(C \in \mathcal{B}_Y\) such that \(x \in B \subseteq U\) and \(y \in C \subseteq V\). Thus we found \(B \times C \in \mathcal{B}_{X \times Y}\) such that \((x,y) \in B \times C \subseteq W\).
+\end{proof}
+
+\begin{example}
+\protect\hypertarget{exm:unnamed-chunk-38}{}\label{exm:unnamed-chunk-38}The standard topology on \(\mathbb{R}^2=\mathbb{R}\times\mathbb{R}\) is the product toplogy. (See example \ref{exm:egR2})
+
+Obsereve that basis elements in product topology in \(\mathbb{R}^2\) are open recatngles (product of two open intervals.).
+\end{example}
+
+\begin{figure}
+\centering
+\includegraphics{figures/figure 10.jpg}
+\caption{\label{fig:fig10}\(~\)}
+\end{figure}
+
+\begin{lemma}
+\protect\hypertarget{lem:unnamed-chunk-39}{}\label{lem:unnamed-chunk-39}The dictionary topology \(\mathbb{R}^2\) is strictly finer than standard toplogy in \(\mathbb{R}^2\)
+\end{lemma}
+
+\begin{proof}
+We are going to use \ref{lem:finerLemma}.
+Let \((a,b)\times(c,d)\subset\mathbb{R}^2\) be a element of basis of standard toplogy on \(\mathbb{R}^2\), and let \(x\times y\in (a,b)\times (c,d)\). Now we need to find basis element of the dictionary order topology that contained in \((a,b)\times (c,d)\).
+So,
+\[x\times y \in (x\times c ,x\times d)\subset (a,b)\times(c,d).\]
+Note that \((x\times c ,x\times d)\) is a basis element in the dictonary order topology. Now let's proove the stricly finer condition.
+
+Let \((p\times q,p \times s)\) be basis element of order toplogy. Let \(p\times y \in (p\times q,p \times s)\). Now observe that there is no open rectangle that containing \(p\times y\) and contained in \((p\times q,p \times s)\). By lemma \ref{lem:finerLemma}, the order topology on \(\mathbb{R}^2\) is strictly finer than standard topology on \(\mathbb{R}^2\).
+\end{proof}
+
+\includegraphics{figures/figure 11.jpg}
+Now I am intersected in a problem. That is can we write dictionary order topology as \(\mathbb{R}^2\) as product topology. Actually we can,
+\[\mathbb{R}^2_{dictionary}:=\mathbb{R}_{discrete }\times \mathbb{R}_{standard}\]
+
+\begin{proof}
+Let \(\{a\} \times (c,d)\) be a basis element in product toplogy \(\mathbb{R}_d \times \mathbb{R}\). Let \(a\times x\in \{a\} \times (c,d)\) obsereve that
+\[a\times x\in \{a\} \times (c,d) = (a\times c,a\times d)\]
+and \((a\times c,a\times d)\) is basis element of order topology \(\mathbb{R}^2\). Thus by lemma \ref{lem:finerLemma}, order toplogy in \(\mathbb{R}^2\) is finer than the product toplogy \(\mathbb{R}_d \times \mathbb{R}\).
+
+Now suppose that \((p\times q, r \times s)\) be a basis elemenet in order toplogy on \(\mathbb{R}^2\).
+
+\begin{itemize}
+\tightlist
+\item
+  If \(p<x\), define \(l=y−1\) and if \(p=x\) define \(l=r\). In either case we know that \((p\times q)<(x\times l)<(x\times y)\).
+\item
+  If \(x<r\) define \(t=y+1\) and if \(x=r\) define \(t=s\). In either case we know that \((x\times y)<(x\times t)<(q \times s)\).
+\end{itemize}
+
+See figure \ref{fig:fig12}
+So \[(x,y) \in \{x\} \times (l,t) \subseteq (p \times q, r \times s).\]
+Thus by lemma \ref{lem:finerLemma}, product toplogy \(\mathbb{R}_d \times \mathbb{R}\) is finer than order toplogy in \(\mathbb{R}^2\).
+
+Therefore, \[\mathbb{R}^2_{dictionary}=\mathbb{R}_{discrete }\times \mathbb{R}_{standard}\]
+\end{proof}
+
+\begin{figure}
+\centering
+\includegraphics{figures/figure 12.jpg}
+\caption{\label{fig:fig12}\(~\)}
+\end{figure}
+
+\hypertarget{the-subspace-topology}{%
+\section{The Subspace Topology}\label{the-subspace-topology}}
+
+\emph{A subset of a topological space has a naturally induced topology, called the subspace topology. In geometry, the subspace topology is the source of all funky typologies.}
+
 \begin{definition}
-\protect\hypertarget{def:unnamed-chunk-25}{}\label{def:unnamed-chunk-25}The topology generated by the subbasis \mathcal{S} is defined to be the collection T of all unions of finite intersections of elements of \mathcal{S}.
+\protect\hypertarget{def:unnamed-chunk-42}{}\label{def:unnamed-chunk-42}Let \((X, \mathcal{T})\) be a topological space. Let \(Y\subseteq X\). The collection
+\[\mathcal{T}_Y = \{Y \cap U | U \in \mathcal{T}\}\] is a topology on \(Y\), called the subspace topology.
+\end{definition}
+
+\begin{proof}
+
+(Proof of the collection \(\mathcal{T}_Y\) is a tology).
+
+\begin{itemize}
+\tightlist
+\item
+  (T1) This is very easy to see. \(\mathcal{T}_Y\) contains \(\emptyset\) and \(Y\) because \(\emptyset = Y \cap \emptyset and Y = Y \cap X\), where \(\emptyset\) and \(X\) are elements of \(\mathcal{T}\).
+\item
+  (T2) Let \(\{U_\alpha \cap Y\in \mathcal{T_Y}:\alpha \in I, \text{ I is index set}\}\) be collection of open sets in subspace toplogy of \(Y\), where \(U_\alpha\in \mathcal{T}\).
+  \[\bigcup_{\alpha \in I}\left(U_\alpha\cap Y\right)
+    =\bigcup_{\alpha \in I}\left(U_\alpha\right)\cap Y.\]
+  Thus it contains in \(\mathcal{T}\). Thus \(\mathcal{T}_Y\) is closed under arbitary unions.
+\item
+  (T3) Let \(U_1\cap Y, U_2\cap Y,..., U_n\cap Y\) be finite collection of open sets in subspace toplogy of \(Y\) in \(X\).
+  \[(U_1\cap Y)\bigcap (U_2\cap Y)\bigcap \cdots \bigcap (U_n\cap Y)=(U_1\cap U_2 \cap \cdot U_n)\bigcap Y.\]
+  Thus it contains in \(\mathcal{T}\).Thus \(\mathcal{T}_Y\) is closed under finite intersections.
+\end{itemize}
+
+\end{proof}
+
+\begin{lemma}
+\protect\hypertarget{lem:unnamed-chunk-44}{}\label{lem:unnamed-chunk-44}Let \((X, \mathcal{T})\) be a topological space, and \(Y\subseteq X\). If \(\mathcal{B}\) is a basis for \(\mathcal{T}\) then the collection
+\[\mathcal{B}_Y = \{B \cap Y | B \in \mathcal{B}\}\]
+is a basis for the subspace topology on \(Y\).
+\end{lemma}
+
+\begin{proof}
+Let \(V\in \mathcal{T}_Y\). Then \(V=U\cap Y\) for some \(U\in \mathcal{T}\). For every \(x \in V\), there is \(B \in \mathcal{B}\) such that \(x \in B \subset U\) since \(\mathcal{B}\) is a basis of \(\mathcal{T}\) (Lemma \ref{lem:lemmaTequalsTB}). Now we found \(Y \cap B\) such that \(x \in Y \cap B \subset V\).
+\end{proof}
+
+\begin{figure}
+\centering
+\includegraphics{figures/figure 13.jpg}
+\caption{\label{fig:fig13}\(~\)}
+\end{figure}
+
+\begin{example}
+\protect\hypertarget{exm:unnamed-chunk-46}{}\label{exm:unnamed-chunk-46}Let \(I = [0, 1]\). The dictionary order on \(I \times I\) is just the restriction to \(I \times I\) of the dictionary order on the plane \(\mathbb{R} \times \mathbb{R}\). However, the dictionary order topology on \(I \times I\) is \textbf{NOT} the same as the subspace topology on \(I \times I\) obtained from the dictionary order topology on \(\mathbb{R} \times \mathbb{R}\)!
+
+For example, the set \(\{\frac{1}{2}\} \times (\frac{1}{2}, 1]\) is open in \(I \times I\) in the
+subspace topology, but not in the order topology, as you can check.
+
+See Figure \ref{fig:fig14}.
+\end{example}
+
+\begin{figure}
+\centering
+\includegraphics{figures/figure 14.jpg}
+\caption{\label{fig:fig14}\(~\)}
+\end{figure}
+
+\textbf{Notation} : The set \(I \times I\) in the dictionary order topology will be called the ordered square, and
+denoted by \(I_o^2\).
+
+Let's generalized the idea.
+
+\begin{lemma}
+\protect\hypertarget{lem:unnamed-chunk-47}{}\label{lem:unnamed-chunk-47}The subspace topology on \(I \times I\) obtained from the dictionary order topology on \(\mathbb{R} \times \mathbb{R}\) is strictly finer than the dictionary order toplogy on \(I \times I\).
+\end{lemma}
+
+\begin{proof}
+So, as pervious we have to proove two things they are finer condtion and strictly condition.
+
+Let \((a_1\times b_1, a_2 \times b_2)\) be a basis elemenet of order toplogy. and \(x\times y \in (a_1\times b_1, a_2 \times b_2)\)
+
+\begin{itemize}
+\item
+  \textbf{Case I} \((a_1<x<a_2)\):
+  \[x\times y \in (x\times-1,x\times 2)\cap I^2= [x\times 0,x\times 1]=\{x\}\times [0,1] \subset (a_1\times b_1, a_2 \times b_2)\]
+  Note that \((x\times -1,x\times 2)\cap I^2\) is a basis element of subspace topology.
+\item
+  \textbf{Case II} \((a_1=x<a_2)\):
+  \[x\times y \in (x\times b_1,x\times 2)\cap I^2= [x\times b_1,x\times 1]=\{x\}\times (b_1,1] \subset (a_1\times b_1, a_2 \times b_2)\]
+  Note that \((x\times b_1,x\times 2)\cap I^2\) is a basis element of subspace topology.
+\item
+  \textbf{Case III} \((a_1<x=a_2)\):
+  \[x\times y \in (x\times -1,x\times b_2)\cap I^2= [x\times 0,x\times b_2]=\{x\}\times [0,b_2) \subset (a_1\times b_1, a_2 \times b_2)\]
+  Note that \((x\times -1,x\times b_2)\cap I^2\) is a basis element of subspace topology.
+\item
+  \textbf{Case IV} \((a_1=x=a_2)\):
+  \[x\times y \in (x\times b_1,x\times b_2)\cap I^2= [x\times b_1,x\times b_2]=\{x\}\times [b_1,b_2) \subset (a_1\times b_1, a_2 \times b_2)\]
+  Note that \((x\times b_1,x\times b_2)\cap I^2\) is a basis element of subspace topology.
+\end{itemize}
+
+See figure \ref{fig:fig15}
+
+In above all four cases, we have found basis element of subspace topology that conatain \(x\times y\) and conatined in \((a_1\times b_1, a_2 \times b_2)\).
+\end{proof}
+
+\begin{figure}
+\centering
+\includegraphics{figures/figure 15.jpg}
+\caption{\label{fig:fig15}\(~\)}
+\end{figure}
+
+\hypertarget{closed-sets-and-limit-points}{%
+\section{Closed Sets and Limit Points}\label{closed-sets-and-limit-points}}
+
+\emph{Closed sets are nothing but complement of open sets. On the other hand, we can also say that open sets are nothing but
+complement of closed sets. Thus we can actually use closed sets to define topology, although mathematicians usually use
+open sets to define topology.}
+
+\begin{definition}
+\protect\hypertarget{def:unnamed-chunk-49}{}\label{def:unnamed-chunk-49}
+
+Let \(A\) be a subset of a topological space \((X, T)\).
+
+\begin{itemize}
+\tightlist
+\item
+  \(A\) is a closed set of \(X\) if \(X - A\) is an open set.
+\item
+  The closure \(\overline{A}\) of \(A\) in \(X\) is the intersection of all closed sets of \(X\), containing \(A\).
+\item
+  The interior \(\text{Int}A\) of \(A\) in \(X\) is the union of all open sets of \(X\), contained in \(A\).
+\item
+  \(x \in X\) is a limit point of \(A\) if \(x \in A\setminus\{x\}\)
+\end{itemize}
+
 \end{definition}
 
 \hypertarget{chapter-2-name}{%
@@ -416,6 +783,29 @@ This satisfies B2 condition.
 \chapter{Chapter 03 name}\label{chapter-03-name}}
 
 Up to there is none.
+
+\hypertarget{exercises}{%
+\chapter{Exercises}\label{exercises}}
+
+\hypertarget{exercise-after-section-16-in-munkress-book}{%
+\section{Exercise after Section 16 in Munkress Book}\label{exercise-after-section-16-in-munkress-book}}
+
+\begin{exercise}
+\protect\hypertarget{exr:unnamed-chunk-50}{}\label{exr:unnamed-chunk-50}Show that if \(Y\) is a subspace of \$X, and \(A\) is a subset of \(Y\) , then the topology \(A\) inherits as a subspace of \(Y\) is the same as the topology it inherits as a subspace of \(X\).
+\end{exercise}
+
+\textbf{Solution}:
+Let's denote the topology on \(X\) as \(\mathcal{T}_X\), the topology on \(Y\) as \(\mathcal{T}_Y\), and the topology on \(A\) as \(\mathcal{T}_A\).
+
+We know that \(Y\) is a subspace of \(X\), so the topology \(\mathcal{T}_Y\) that \(Y\) inherits from \(X\) is \(\mathcal{T}_Y = \{ Y \cap U : U \in \mathcal{T}_X \}\).
+
+Similarly, \(A\) is a subset of \(Y\), so the topology \(\mathcal{T}_A\) that \(A\) inherits from \(Y\) is \(\mathcal{T}_A = \{ A \cap V : V \in \mathcal{T}_Y \}\).
+
+Substituting \(\mathcal{T}_Y\) into the equation for \(\mathcal{T}_A\), we get \(\mathcal{T}_A = \{ A \cap (Y \cap U) : U \in \mathcal{T}_X \}\).
+
+Since \(A\) is a subset of \(Y\), \(A \cap Y = A\). So, \(\mathcal{T}_A = \{ A \cap U : U \in \mathcal{T}_X \}\).
+
+This is exactly the topology that \(A\) would inherit as a subspace of \(X\). Therefore, the topology \(A\) inherits as a subspace of \(Y\) is the same as the topology it inherits as a subspace of \(X\).
 
   \bibliography{book.bib,packages.bib}
 
